--- a/html/css/style.css
+++ b/html/css/style.css
@@ -57,7 +57,7 @@ LOGIN
 
 .login-main .verification-notice,
 .register-main .verification-notice {
-  /*	display: none;*/
+  /*  display: none;*/
   color: #bbb;
 }
 
@@ -81,7 +81,7 @@ LOGIN
 }
 
 .register-main {
-  /*	width: 800px;*/
+  /*  width: 800px;*/
   margin: 0 auto;
   padding-top: 30px;
 }
@@ -90,7 +90,7 @@ LOGIN
 .purchase-page .subtitle {
   border-top: 1px solid #fff;
   border-bottom: 1px solid #fff;
-  margin: 0 -18px;
+  margin: 0 -40px;
   margin-bottom: 15px;
   padding: 10px 58px;
   background: #f0f0f0;
@@ -109,14 +109,13 @@ LOGIN
 }
 
 .register-main .article-room.form-group>div {
-  height: 150px;
+  /*  height: 150px;*/
   overflow-y: auto;
   color: rgb(0, 0, 0);
 }
 
 .register-main .article-room p {
-  font-size: 12px;
-  line-height: 22px;
+  line-height: 35px;
 }
 
 .register-main .form-group.article-room+.button-room {
@@ -326,6 +325,7 @@ TREE
   -moz-box-shadow: none;
   border: none;
   margin-bottom: 0;
+  padding: 30px;
 }
 
 .panel-default {
@@ -568,31 +568,33 @@ a:focus {
 }
 
 .header {
-  background: #DEDEDE;
+  background: #999;
   position: relative;
   z-index: 3;
-  padding: 0 15px 15px 15px;
   margin-bottom: 15px;
   font-weight: bold;
   position: relative;
+  font-size: 150%;
+  color: #fff;
+  text-align: center;
+  border-bottom: 5px solid #dfdfdf;
 }
 
+
+}
 .header img {
   margin-top: 20px;
   margin-left: 10px;
   margin-bottom: 10px;
 }
-
 .header>.pull-right {
   position: absolute;
   top: 0;
   right: 15px;
 }
-
 .header .pull-right .login-info {
   margin-bottom: 20px;
 }
-
 .header .pull-right .login-info>span,
 .header .pull-right .login-info a {
   display: inline-block;
@@ -601,12 +603,10 @@ a:focus {
   background: #CCCCCC;
   font-size: 12px;
 }
-
 .header .nav>li>a {
   font-size: 12px;
   color: #9fa0a0;
 }
-
 .header .nav-pills>li.active>a,
 .header .nav-pills>li.active>a:hover,
 .header .nav-pills>li.active>a:focus,
@@ -615,7 +615,6 @@ a:focus {
   background-color: transparent;
   color: #000;
 }
-
 .footer {
   padding: 10px;
   line-height: 25px;
@@ -623,12 +622,10 @@ a:focus {
   background: #DEDEDE;
   margin-top: -58px;
 }
-
 .login+.main-container.container-fluid {
   margin-top: -250px;
   padding-top: 250px;
 }
-
 .main-container.container-fluid {
   height: 100%;
   position: relative;
@@ -637,20 +634,16 @@ a:focus {
   padding-top: 125px;
   padding-bottom: 90px;
 }
-
 .main-container>.row {
   overflow-y: auto;
 }
-
 .main-nav {
   border-right: 1px solid #ccc;
   padding-right: 15px;
 }
-
 .main-nav .glyphicon {
   top: 3px;
 }
-
 .main-nav>li>a {
   font-size: 18px;
   color: #000;
@@ -659,38 +652,31 @@ a:focus {
   -moz-border-radius: 0px;
   border-radius: 0px;
 }
-
 .main-nav>li.active>a,
 .main-nav>li.active>a:hover,
 .main-nav>li.active>a:focus {
   color: #093868;
   font-weight: bold;
 }
-
 .news-board {
   text-align: center;
   background-color: #DFDFDF;
 }
-
 .news-board .panel-heading {
   background-color: #9FA0A0;
 }
-
 .news-board h3 {
   font-weight: bold;
 }
-
 .news-board .panel-body p {
   position: relative;
 }
-
 .news-board .panel-body a {
   overflow: hidden;
   display: block;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
-
 .news-board a.show-more {
   display: block;
   font-size: 12px;
@@ -699,7 +685,6 @@ a:focus {
   padding: 5px 0;
   margin: 0 10px;
 }
-
 .main-search .navbar-form {
   padding: 0;
   box-shadow: none;
@@ -707,28 +692,23 @@ a:focus {
   -moz-box-shadow: none;
   border: none;
 }
-
 .main-search .collapse {
   padding-left: 0;
   padding-right: 0px;
 }
-
 .main-search .collapse.in {
   padding-left: 15px;
   padding-right: 15px;
 }
-
 .main-search .form-group .navbar-text {
   margin: 0;
   margin-top: 7px;
 }
-
 .main-search .form-group .dropdown button {
   display: block;
   width: 100%;
   text-align: left;
 }
-
 .main-search .col-sm-2,
 .main-search .col-sm-4,
 .main-search .col-sm-6,
@@ -739,60 +719,48 @@ a:focus {
   padding-left: 5px;
   padding-right: 5px;
 }
-
 .main-search button {
   float: right;
   margin-left: 5px;
 }
-
 .main-search button,
 .main-search input {
   padding-left: 5px;
   padding-right: 5px;
 }
-
 .mx-search button,
 .mx-search input {
   font-size: 12px;
 }
-
 .main-search.mx-search .form-group .navbar-text {
   margin: 0;
 }
-
 .main-body-title {
   font-weight: bold;
   margin-top: 0;
   margin-bottom: 15px;
 }
-
 .btn+.main-body-title {
   margin-top: 50px;
 }
-
 .breadcrumb {
   margin-bottom: 5px;
   border-bottom: 1px solid #ccc;
 }
-
 .book-info {
   line-height: 35px;
   border-bottom: 1px solid #ccc;
 }
-
 .book-info .col-md-3 {
   width: 22%;
 }
-
 .book-info .col-md-1 {
   padding-right: 0;
   width: 10%;
 }
-
 .book-container {
   padding: 15px;
 }
-
 .book-container .watermark {
   font-size: 145px;
   color: #666;
@@ -801,29 +769,27 @@ a:focus {
   right: 5%;
   filter: alpha(opacity=50);
   /*支持 IE 浏览器*/
+  
   -moz-opacity: 0.50;
   /*支持 FireFox 浏览器*/
+  
   opacity: 0.50;
   /*支持 Chrome, Opera, Safari 等浏览器*/
 }
-
 .new.btn {
-  /*	background: #DFDFDF;*/
+  /*  background: #DFDFDF;*/
+  
   text-align: left;
 }
-
 .table.user-rights div {
   line-height: 1.42857;
   display: inline-block;
 }
-
 .brand-list {}
-
 .brand-list li {
   display: block;
   margin: 15px 0;
 }
-
 .brand-list a {
   font-size: 24px;
   display: block;
@@ -831,22 +797,18 @@ a:focus {
   border: 1px solid #fff;
   position: relative;
 }
-
 .brand-list a:hover {
   text-decoration: none;
   border: 1px solid #dfdfdf;
 }
-
 .brand-list a span:first-child {
   display: inline-block;
   width: 232px;
   text-align: center;
 }
-
 .brand-list a span.glyphicon {
   display: none;
 }
-
 .brand-list a:hover span.glyphicon {
   display: block;
   font-size: 48px;
@@ -855,77 +817,63 @@ a:focus {
   right: 40px;
   color: #dfdfdf;
 }
-
 .brand-list img {
   margin-right: 15px;
   height: 95px;
 }
-
 .brand-list .logo-last img {
   height: 50px;
 }
-
 
 /************
 
 PAGES
 
 ************/
-
 .welcome-room {
   border: 7px solid #ccc;
   text-align: center;
 }
-
 .buy-success .container {
   text-align: center;
 }
-
 .buy-success h1 {
   font-size: 85px;
   border: 1px solid #ccc;
-  /*	border-radius: 500px;*/
+  /*  border-radius: 500px;*/
+  
   width: 200px;
   height: 200px;
   line-height: 200px;
   margin: 0 auto;
 }
-
 .buy-success h1,
 .buy-success h3 {
   margin-bottom: 30px;
 }
-
 .buy-success button {
   margin: 0 auto;
 }
-
 .error-page .center-block {
   float: none;
 }
-
 .error-page .main-container .center-block {
   padding-top: 50px;
 }
-
 .error-page .center-block .pull-left:not(:first-child) {
   padding-top: 20px;
 }
-
 .purchase-page .container {
   width: 800px;
 }
-
 .purchase-page .subtitle {
   padding-left: 20px;
 }
-
 .purchase-page .unit-title {
   padding: 5px 10px;
   border-bottom: 1px solid #aaa;
   color: #999;
 }
-
 .purchase-page .brand-name {
   padding: 0px 20px;
   padding-left: 100px;
@@ -936,31 +884,25 @@ PAGES
   line-height: 50px;
   border-bottom: 1px solid #fff;
 }
-
 .purchase-page .brand-name img {
   margin: 10px;
 }
-
 .purchase-page .service-life {
   padding-left: 150px;
   margin-bottom: 15px;
 }
-
 .purchase-page .service-life label {
   margin-left: 50px;
 }
-
 .purchase-page .service-life label span,
 .purchase-page .brand-name span {
   color: #666;
   margin-left: 5px;
 }
-
 .fixings-view.main-container.container-fluid {
   padding-bottom: 80px;
   padding-top: 130px;
 }
-
 .select-fixings {
   overflow: hidden;
   background: #093868;
@@ -971,77 +913,132 @@ PAGES
   padding: 0 15px;
   margin-bottom: -22px;
 }
-
 .select-fixings a {
   color: #9fa0a0;
 }
-
 .select-fixings .view-brand a {
   display: block;
   float: right;
   padding: 0 15px;
   text-align: center;
 }
-
 .select-fixings .view-brand a.active,
 .select-fixings .view-brand a:hover {
   color: #fff;
 }
-
 .select-fixings .view-style {
   float: left;
   background: #ccc;
   padding: 2px 10px;
 }
-
 .select-fixings .view-style a {
   font-size: 12px;
   margin: 0 5px;
 }
-
 .select-fixings .view-style a.active,
 .select-fixings .view-style a:hover {
   color: #000;
 }
+.form_container .form-group > .control-label {
+  color: #666;
+}
+.form_container .subtitle {
+  margin-top: 30px;
+}
+.form_container .subtitle:first-child {
+  margin-top: 0;
+}
+.form_container textarea {
+  height: 150px;
+}
+.unit_title {
+  padding: 10px 20px;
+  margin-bottom: 25px;
+  font-weight: bold;
+  border-bottom: 1px dashed #999;
+  margin-top: 30px;
+}
+.formTitle {
+  font-size: 150%;
+  margin-bottom: 30px;
+  text-align: center;
+  color: #093868;
+  margin-top: 70px;
+  font-weight: bold;
+}
+.formTitle:first-child {
+  margin-top: 0;
+}
+.add_more {
+  background: #efefef;
+  padding: 20px 30px 10px 30px;
+  border-top: 1px solid #999;
+  margin-bottom: 10px;
+  margin-top: 23px;
+}
+.unit_title + .add_more {
+  margin-top: -26px;
+  ;
+}
+.container {
+  width: 90%;
+}
+.page_notice {
+  color: #666;
+  text-align: center;
+}
+.formTitle .page_notice {
+  font-size: 14px;
+  margin-top: 5px;
+  font-weight: normal;
+}
+.formTitle + .subtitle {
+  margin-top: 0px;
+}
+.listUpload .form-group {
+  border-bottom: 1px dashed #ccc;
+  padding-bottom: 20px;
+  padding-top: 10px;
+}
+.textarea_room .control-label {
+  text-align: left;
+  margin-bottom: 5px;
+  padding-left: 30px;
+  padding-right: 30px;
+}
 
-
-/************
-
-THEME
-
-************/
-
+/*******
+*
+*  THEME
+*
+******/
 .main-body-title {
   color: #093868;
 }
-
 form .well,
 .form-view .col-sm-8 {
   background: #dedede;
 }
-
 .buy-success h1 {
   color: #093868;
   border-color: #093868;
 }
-
 
 /************
 
 MEDIA
 
 ************/
-
 @media screen and (max-width: 1366px) {
   .mx-search .text-long {
     font-size: 12px;
     width: 25%;
   }
+  
   .mx-search .text-long+div {
     width: 75%;
   }
 }
-
 @media screen and (min-width: 1770px) {
   .main-search.mx-search .form-group .navbar-text {
     line-height: 30px;
