--- a/html/css/less/site.less
+++ b/html/css/less/site.less
@@ -1,5 +1,7 @@
-@import url('layouts.less');
-/*@import url('global.less');*/
+@import url('global.less');
+@import url('login.less');
+// @import url('ui.less');
+
 /*@import url('login.less');
 @import url('login.less');
-@import url('login.less');   */  
+@import url('login.less');   */
