--- a/html/css/less/login.less
+++ b/html/css/less/login.less
@@ -1,4 +1,12 @@
 @login_input_bg: #DEDEDE;
+.login_body {
+	background: #fff;
+	.footer {
+		position: fixed;
+		width: 100%;
+		bottom: 0px;
+	}
+}
 
 .login-main {
 	margin: 10px auto;
